test-cases/negative/test_078_object_without_type.lay
# negative test: object creation without type
# expected: parser should reject this

the variable person is a new with
  name is 'John'


